--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,5 @@
-Hey you
+No changelog yet
 
-The changle log will start with the first beta release.
+Why?
+Todoyu is still alpha. The changle log will start with the first beta release.
 At the moment there are so much bugfixes every day, this file would get huge.
-
-cu
