* moved core date locales into core/locale/date.xml * reduced redundant locale labels

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -6,7 +6,7 @@
 		<label index="loading">loading</label>
 		<label index="hrs">h</label>
 		<label index="expandall">Expand all</label>
-		<label index="author">Autor</label>
+		<label index="author">Author</label>
 		<label index="time">Time</label>
 		<label index="pleaseChoose">Please chose</label>
 		<label index="year">Year</label>
@@ -37,40 +37,8 @@
 		<label index="beginning">Beginning</label>
 		<label index="deadline">Deadline</label>
 		<label index="closeWindow">close window</label>
-		<label index="month.january">January</label>
-		<label index="month.february">February</label>
-		<label index="month.march">March</label>
-		<label index="month.april">April</label>
-		<label index="month.may">May</label>
-		<label index="month.june">June</label>
-		<label index="month.july">July</label>
-		<label index="month.august">August</label>
-		<label index="month.september">September</label>
-		<label index="month.october">October</label>
-		<label index="month.november">November</label>
-		<label index="month.december">December</label>
-		<label index="weekday.monday">Monday</label>
-		<label index="weekday.tuesday">Tuesday</label>
-		<label index="weekday.wednesday">Wednesday</label>
-		<label index="weekday.thursday">Thursday</label>
-		<label index="weekday.friday">Friday</label>
-		<label index="weekday.saturday">Saturday</label>
-		<label index="weekday.sunday">Sunday</label>
-		<label index="time.second">Second</label>
-		<label index="time.seconds">Seconds</label>
-		<label index="time.minute">Minute</label>
-		<label index="time.minutes">Minutes</label>
-		<label index="time.hour">Hour</label>
-		<label index="time.hours">Hours</label>
-		<label index="date.day">Day</label>
-		<label index="date.days">Days</label>
-		<label index="date.week">Week</label>
-		<label index="date.weeks">Weeks</label>
-		<label index="date.month">Month</label>
-		<label index="date.months">Months</label>
-		<label index="date.year">Year</label>
-		<label index="date.years">Years</label>
 		<label index="tab.todoyu.label">Todoyu</label>
+		<label index="search">Suche</label>
 	</labels>
 	<labels lang="de">
 		<label index="yes">Ja</label>
@@ -109,38 +77,5 @@
 		<label index="beginning">Beginn</label>
 		<label index="deadline">Deadline</label>
 		<label index="closeWindow">Fenster schliessen</label>
-		<label index="month.january">Januar</label>
-		<label index="month.february">Februar</label>
-		<label index="month.march">März</label>
-		<label index="month.april">April</label>
-		<label index="month.may">Mai</label>
-		<label index="month.june">Juni</label>
-		<label index="month.july">July</label>
-		<label index="month.august">August</label>
-		<label index="month.september">September</label>
-		<label index="month.october">Oktober</label>
-		<label index="month.november">November</label>
-		<label index="month.december">Dezember</label>
-		<label index="weekday.monday">Montag</label>
-		<label index="weekday.tuesday">Dienstag</label>
-		<label index="weekday.wednesday">Mittwoch</label>
-		<label index="weekday.thursday">Donnerstag</label>
-		<label index="weekday.friday">Freitag</label>
-		<label index="weekday.saturday">Samstag</label>
-		<label index="weekday.sunday">Sonntag</label>
-		<label index="time.second">Sekunde</label>
-		<label index="time.seconds">Sekunden</label>
-		<label index="time.minute">Minute</label>
-		<label index="time.minutes">Minuten</label>
-		<label index="time.hour">Stunde</label>
-		<label index="time.hours">Stunden</label>
-		<label index="date.day">Tag</label>
-		<label index="date.days">Tage</label>
-		<label index="date.week">Woche</label>
-		<label index="date.weeks">Wochen</label>
-		<label index="date.month">Monat</label>
-		<label index="date.months">Monate</label>
-		<label index="date.year">Jahr</label>
-		<label index="date.years">Jahre</label>
 	</labels>
 </locallang>
