--- a/core/locale/static_country_zone.xml
+++ b/core/locale/static_country_zone.xml
@@ -483,6 +483,5 @@
 		<label index="BRA.SP.localname">S</label>
 		<label index="BRA.TO.localname">Tocantins</label>
 	</labels>
-	<labels lang="de">
-	</labels>
+	<labels lang="de"></labels>
 </locallang>
