--- a/core/locale/static_currency.xml
+++ b/core/locale/static_currency.xml
@@ -328,6 +328,5 @@
 		<label index="SRD.subname">cent</label>
 		<label index="TRY.subname">new kuruş</label>
 	</labels>
-	<labels lang="de">
-	</labels>
+	<labels lang="de"></labels>
 </locallang>
