--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -20,6 +20,11 @@
 		<label index="cancel">Cancel</label>
 		<label index="back">Back</label>
 		<label index="delete">Delete</label>
+		<label index="hide">Hide</label>
+		<label index="unhide">Unhide</label>
+		<label index="rename">Rename</label>
+		<label index="reset">Reset</label>
+		<label index="download">Download</label>
 		<label index="description">Description</label>
 		<label index="visibleForCustomer">Visible for customer</label>
 		<label index="type">Type</label>
@@ -29,7 +34,11 @@
 		<label index="until">until</label>
 		<label index="private">Private</label>
 		<label index="project">Project</label>
+		<label index="projects">Projects</label>
+		<label index="tasks">Tasks</label>
 		<label index="task">Task</label>
+		<label index="record">Record</label>
+		<label index="records">Records</label>
 		<label index="update">Update</label>
 		<label index="components">Components</label>
 		<label index="start">Start</label>
