--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -4,50 +4,45 @@
 		<label index="yes">Yes</label>
 		<label index="no">No</label>
 		<label index="loading">loading</label>
-		<label index="hrs">h</label>
 		<label index="expandall">Expand all</label>
 		<label index="author">Author</label>
-		<label index="time">Time</label>
 		<label index="pleaseChoose">Please chose</label>
-		<label index="year">Year</label>
-		<label index="edit">Edit</label>
 		<label index="title">Title</label>
 		<label index="description">Description</label>
 		<label index="date">Date</label>
 		<label index="dateFormat">y.n.j</label>
+		<label index="edit">Edit</label>
 		<label index="load">Load</label>
 		<label index="save">Save</label>
 		<label index="cancel">Cancel</label>
-		<label index="back">Back</label>
 		<label index="delete">Delete</label>
 		<label index="hide">Hide</label>
 		<label index="unhide">Unhide</label>
 		<label index="rename">Rename</label>
 		<label index="reset">Reset</label>
-		<label index="download">Download</label>
-		<label index="description">Description</label>
+		<label index="update">Update</label>
+		<label index="search">Suche</label>
+		<label index="back">Back</label>		
 		<label index="visibleForCustomer">Visible for customer</label>
 		<label index="type">Type</label>
+		<label index="record">Record</label>
+		<label index="records">Records</label>
+		<label index="components">Components</label>
 		<label index="what">What</label>
 		<label index="where">Where</label>
-		<label index="when">Wann</label>
+		<label index="when">When</label>
 		<label index="until">until</label>
 		<label index="private">Private</label>
 		<label index="project">Project</label>
 		<label index="projects">Projects</label>
 		<label index="tasks">Tasks</label>
 		<label index="task">Task</label>
-		<label index="record">Record</label>
-		<label index="records">Records</label>
-		<label index="update">Update</label>
-		<label index="components">Components</label>
 		<label index="start">Start</label>
 		<label index="end">End</label>
 		<label index="beginning">Beginning</label>
 		<label index="deadline">Deadline</label>
 		<label index="closeWindow">close window</label>
 		<label index="tab.todoyu.label">Todoyu</label>
-		<label index="search">Suche</label>
 	</labels>
 	<labels lang="de"></labels>
 </locallang>
