--- a/core/locale/date.xml
+++ b/core/locale/date.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
 	<labels lang="en">
-		<label index="time">Time</label>^
-		<label index="year">Year</label>
+		<label index="date">Date</label>
+		<label index="time">Time</label>
 		<label index="hrs">h</label>
 		<label index="month.january">January</label>
 		<label index="month.february">February</label>
@@ -36,14 +36,21 @@
 		<label index="time.minutes">Minutes</label>
 		<label index="time.hour">Hour</label>
 		<label index="time.hours">Hours</label>
-		<label index="date.day">Day</label>
-		<label index="date.days">Days</label>
-		<label index="date.week">Week</label>
-		<label index="date.weeks">Weeks</label>
-		<label index="date.month">Month</label>
-		<label index="date.months">Months</label>
-		<label index="date.year">Year</label>
-		<label index="date.years">Years</label>
+		<label index="day">Day</label>
+		<label index="days">Days</label>
+		<label index="week">Week</label>
+		<label index="weeks">Weeks</label>
+		<label index="month">Month</label>
+		<label index="months">Months</label>
+		<label index="year">Year</label>
+		<label index="years">Years</label>
+		<label index="weeknumber">Calendar week</label>
+		<label index="weeknumberAbbr">CW</label>
+		<label index="daily">Daily</label>
+		<label index="weekly">Weekly</label>
+		<label index="monthly">Monthly</label>
+		<label index="yearly">Yearly</label>
+		<label index="today">Today</label>
 	</labels>
 	<labels lang="de"></labels>
 </locallang>
