--- a/core/locale/date.xml
+++ b/core/locale/date.xml
@@ -44,14 +44,64 @@
 		<label index="months">Months</label>
 		<label index="year">Year</label>
 		<label index="years">Years</label>
-		<label index="weeknumber">Calendar week</label>
+		<label index="weeknumber">Calendar Week</label>
 		<label index="weeknumberAbbr">CW</label>
 		<label index="daily">Daily</label>
 		<label index="weekly">Weekly</label>
 		<label index="monthly">Monthly</label>
 		<label index="yearly">Yearly</label>
 		<label index="today">Today</label>
-<!--  ......................................... added after 20091122 -->
 	</labels>
-	<labels lang="de"></labels>
+	<labels lang="de">
+		<label index="date">Datum</label>
+		<label index="time">Zeit</label>
+		<label index="hrs">h</label>
+		<label index="month.january">Januar</label>
+		<label index="month.february">Februar</label>
+		<label index="month.march">März</label>
+		<label index="month.april">April</label>
+		<label index="month.may">Mai</label>
+		<label index="month.june">Juni</label>
+		<label index="month.july">Juli</label>
+		<label index="month.august">August</label>
+		<label index="month.september">September</label>
+		<label index="month.october">Oktober</label>
+		<label index="month.november">November</label>
+		<label index="month.december">Dezember</label>
+		<label index="weekday.monday">Montag</label>
+		<label index="weekday.tuesday">Dienstag</label>
+		<label index="weekday.wednesday">Mittwoch</label>
+		<label index="weekday.thursday">Donnerstag</label>
+		<label index="weekday.friday">Freitag</label>
+		<label index="weekday.saturday">Samstag</label>
+		<label index="weekday.sunday">Sonntag</label>
+		<label index="weekday.mon">Mo</label>
+		<label index="weekday.tue">Di</label>
+		<label index="weekday.wed">Mi</label>
+		<label index="weekday.thu">Do/label>
+		<label index="weekday.fri">Fr</label>
+		<label index="weekday.sat">Sa</label>
+		<label index="weekday.sun">So</label>
+		<label index="time.second">Sekunde</label>
+		<label index="time.seconds">Sekunden</label>
+		<label index="time.minute">Minute</label>
+		<label index="time.minutes">Minuten</label>
+		<label index="time.hour">Stunde</label>
+		<label index="time.hours">Stunden</label>
+		<label index="day">Tag</label>
+		<label index="days">Tage</label>
+		<label index="week">Woche</label>
+		<label index="weeks">Wochen</label>
+		<label index="month">Monat</label>
+		<label index="months">Monate</label>
+		<label index="year">Jahr</label>
+		<label index="years">Jahre</label>
+		<label index="weeknumber">Kalenderwoche</label>
+		<label index="weeknumberAbbr">KW</label>
+		<label index="daily">Täglich</label>
+		<label index="weekly">Wöchentlich</label>
+		<label index="monthly">Monatlich</label>
+		<label index="yearly">Jährlich</label>
+		<label index="today">Heute</label>
+	</labels>
 </locallang>
