--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,1 @@
-No changelog yet
-
-Why?
-Todoyu is still alpha. The changle log will start with the first beta release.
-At the moment there are so much bugfixes every day, this file would get huge.
+Changelog will be started after the first beta release. And this is now!
