* checked / fixed / implemented several search filter conditions negations * improved autocompleter visual style * improved filter conditions negations visual style (added button-look to option)

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -62,6 +62,7 @@
 		<label index="footer.devmanual">Dev</label>
 		<label index="footer.devmanual.title">Manual for developers and other smart people</label>
 		<label index="paging.page">Page</label>
+		<label index="input.autocompleter">Autocompleting input</label>
 	</labels>
 	<labels lang="de">
 		<label index="tab.todoyu.label">todoyu</label>
@@ -125,5 +126,6 @@
 		<label index="footer.devmanual">Dev</label>
 		<label index="footer.devmanual.title">Anleitungen für Entwickler und andere kluge Leute</label>
 		<label index="paging.page">Seite</label>
+		<label index="input.autocompleter">Autovervollständigende Eingabe</label>
 	</labels>
 </locallang>
