* Updated error handler * Added support to show php errors over ajax * Bugfixes * Task js cleanup

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -63,6 +63,7 @@
 		<label index="footer.devmanual.title">Manual for developers and other smart people</label>
 		<label index="paging.page">Page</label>
 		<label index="input.autocompleter">Autocompleting input</label>
+		<label index="ajax.requestFailed">Cannot connect to server (your connection or server down?)</label>
 	</labels>
 	<labels lang="de">
 		<label index="tab.todoyu.label">todoyu</label>
@@ -127,5 +128,6 @@
 		<label index="footer.devmanual.title">Anleitungen für Entwickler und andere kluge Leute</label>
 		<label index="paging.page">Seite</label>
 		<label index="input.autocompleter">Autovervollständigende Eingabe</label>
+		<label index="ajax.requestFailed">Keine Verbindung zum Server (Verbindungs- oder Serverprobleme?)</label>
 	</labels>
 </locallang>
