--- a/core/locale/static_language.xml
+++ b/core/locale/static_language.xml
@@ -187,6 +187,8 @@
 		<label index="zu">Zulu</label>
 	</labels>
 	<labels lang="de">
-
+		<!-- Only currently used languages are translated -->
+		<label index="de">Deutsch</label>
+		<label index="en">Englisch</label>
 	</labels>
 </locallang>
